gcc/testsuite/gdc.test/compilable/imports/test15150b.d
module imports.test15150b;

import imports.test15150a : x;
