gcc/testsuite/gdc.test/fail_compilation/imports/spell23908a.d
module imports.spell23908a;

import imports.spell23908b : nonexistent;
